# web_api_with_rust

./: README.md
rocket-app/: .env  Cargo.toml  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  diesel.toml  readme.txt
rocket-app/migrations/2024-11-12-181724_create_rustaceans/: up.sql
rocket-app/migrations/2024-11-16-215336_remove_created_at/: down.sql  up.sql
rocket-app/src/: auth.rs  main.rs  models.rs  schema.rs
