[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rocket dependencies
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", default-features = false, features = ["diesel_sqlite_pool"] }

# Diesel ORM with SQLite support
#diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel = { version = "2.1.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding
base64 = "0.22.1"

# Environment variables support
dotenvy = "0.15"

# SQLite native dependency (for Diesel)
libsqlite3-sys = "0.30.1"
chrono = { version = "0.4", features = ["serde"] }


# Uncomment the following line if you encounter SQLite setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }

#[package]
#name = "rocket-app"
#version = "0.1.0"
#edition = "2021"
#
#[dependencies]
##rocket = "0.5.0-rc"
#rocket = { version = "0.5.0-rc.3", features = ["json"] }
#serde_json = "1.0"
#base64 = "0.20.0"
##rocket = "0.5.0-rc.3"
##base64 = "0.20.0"
##diesel = { version = "2.1.1", features = ["sqlite", "chrono"] }
##dotenvy = "0.15" # Optional, for using .env files
#
##diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
#diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
## build libsqlite3 as part of the build process
## uncomment this line if you run into setup issues
## libsqlite3-sys = { version = "0.30", features = ["bundled"] }
#dotenvy = "0.15"
#
#[dependencies.rockcket_s]
#version = "0.4.23"
#features = ["serde"]
#
#[dependencies.serde]